test/samples/invalid/if_succeeds_on_free_function.invalid.sol
pragma solidity ^0.7.5;

/// #if_succeeds {:msg "Error"} true;
function some() {}
